Halls display fixes: 1) shuffle displayed halls, 2) fixed <a> overflow in caracteristics table

--- a/web/scss/layout/_global.scss
+++ b/web/scss/layout/_global.scss
@@ -77,4 +77,10 @@ main {
 
 .word-break-all {
   word-break: break-all;
+  -webkit-hyphens: auto;
+  -moz-hyphens: auto;
+  -ms-hyphens: auto;
+  -o-hyphens: auto;
+  hyphens: auto;
+  overflow-wrap: break-word;
 }
